Se añaden opciones de menu a todas las paginas

--- a/venta.html
+++ b/venta.html
@@ -80,7 +80,7 @@
                         <a class="collapse-item" href="usuarios.html">Usuarios</a>
                         <a class="collapse-item" href="clientes.html">Clientes</a>
                         <a class="collapse-item" href="productos.html">Productos</a>
-                        <a class="collapse-item active" href="categorias.html">Categorias</a>
+                        <a class="collapse-item" href="categorias.html">Categorias</a>
                     </div>
                 </div>
             </li>
