--- a/ventas.html
+++ b/ventas.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>El Secreto de Roxana - Nueva Venta</title>
+    <title>El Secreto de Roxana - Listado de Ventas</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -31,6 +31,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.4/build/jquery.datetimepicker.min.css"
         rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.2.1/css/dataTables.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/3.2.0/css/buttons.dataTables.min.css">
 </head>
 
 <body id="page-top">
@@ -103,8 +105,8 @@
                 <div id="collapsePOS" class="collapse show" aria-labelledby="headingPages"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item active" href="venta.html">Nueva Venta</a>
-                        <a class="collapse-item" href="ventas.html">Lista Ventas</a>
+                        <a class="collapse-item" href="venta.html">Nueva Venta</a>
+                        <a class="collapse-item active" href="ventas.html">Lista Ventas</a>
                     </div>
                 </div>
             </li>
@@ -199,74 +201,21 @@
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
-                    <h1 class="h3 mb-4 text-gray-800">Categorías</h1>
+                    <h1 class="h3 mb-4 text-gray-800">Lista de Ventas</h1>
 
                     <div class="row">
-                        <div class="col-md-12 row" id="div-categorias">
-                        </div>
-                        <div class="col-md-12 row">
-                            <h4 class="d-block w-100">Lista Productos</h4>
-                            <div class="col-md-8 row" id="div-productos">
-
-                            </div>
-                            <div class="col-md-4" style="border-left: solid 1px #313131;">
-                                <div class="row">
-                                    <h4>Resumen de Venta</h4>
-                                    <!--<div class="col-md-12 my-2">
-                                        <label for="">Fecha:</label>
-                                        <input class="form-control" type="text" name="mesa" id="fecha">
-                                    </div>-->
-                                    <div class="form-group col-md-12 my-2">
-                                        <label>Cliente</label>
-                                        <div class="input-group mb-3" style="display: flex;">
-                                            <select name="" id="id_cliente" class="form-control">
-                                                <option value="0">--SELECCIONE--</option>
-                                            </select>
-                                            <div class="input-group-append">
-                                                <button class="btn btn-success" type="button" data-toggle="modal"
-                                                    data-target="#formulario" onclick="nuevo_cliente();">
-                                                    <i class="fa fa-plus"></i></button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group col-md-12 my-2">
-                                        <label>Forma de Pago</label>
-                                        <select class="form-control" id="id_forma_pago" name="id_forma_pago">
-                                            <option value="0">--SELECCIONE--</option>
-                                        </select>
-                                    </div>
-                                    <div class="w-100 col-md-12" id="div_lista_ventas">
-                                        <div class="order-empty" style="text-align: center; margin: 48px; color: #DDD;">
-                                            <i class="fa fa-shopping-cart" role="img" aria-label="Shopping cart"
-                                                title="Shopping cart" style="font-size: 64px;"></i>
-                                            <h1 style="font-size: 20px;">La lista esta vacia.</h1>
-                                        </div>
-                                    </div>
-
-                                </div>
-                                <hr>
-                                <div class="row">
-                                    <table class="table">
-                                        <tbody>
-                                            <tr>
-                                                <th scope="row" width="50%" style="text-align: right;">
-                                                    Total:
-                                                </th>
-                                                <td id="">
-                                                    <span id="total_detalle_span">S/ </span>
-                                                    <input type="hidden" name="" readonly id="total"
-                                                        class="form-control">
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                    <hr>
-                                    <div class="w-100 text-center">
-                                        <button class="btn btn-success" id="guardar_venta">Guardar Venta</button>
-                                        <button class="btn btn-danger" onclick="limpiar_formulario();">Cancelar</button>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="table-response w-100">
+                            <table class="table table-bordered" id="tabla-ventas">
+                                <thead>
+                                    <th>Id</th>
+                                    <th>Fecha</th>
+                                    <th>Cliente</th>
+                                    <th>Sucursal</th>
+                                    <th>Monto</th>
+                                    <th></th>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -301,62 +250,26 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="clienteModalLabel"></h5>
+                    <h5 class="modal-title" id="clienteModalLabel">Detalle de Venta</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span>
                     </button>
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-md-12">
-                            <label for="nombres">Nombres</label>
-                            <input type="text" class="form-control" id="nombres">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="dni">DNI</label>
-                            <input type="text" class="form-control" id="dni">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="id_sucursal">Sucursal</label>
-                            <select name="" id="id_sucursal" class="form-control"></select>
-                        </div>
-                        <div class="col-md-12">
-                            <label for="id_tipo_cliente">Tipo Cliente</label>
-                            <select name="" id="id_tipo_cliente" class="form-control">
-                                <option value="0">--SELECCIONE--</option>
-                            </select>
-                        </div>
-                        <div id="div-tipo-cliente" class="col-md-12 form-row" hidden>
-                            <div class="col-md-6">
-                                <label for="grado">Grado</label>
-                                <input type="text" class="form-control" id="grado">
-                            </div>
-                            <div class="col-md-6">
-                                <label for="seccion">Sección</label>
-                                <input type="text" class="form-control" id="seccion">
-                            </div>
-                            <div class="col-md-12">
-                                <label for="padre">Padre</label>
-                                <input type="text" class="form-control" id="padre">
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="celular">Celular</label>
-                            <input type="text" class="form-control" id="celular">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="saldo">Saldo</label>
-                            <input type="text" class="form-control" id="saldo">
-                        </div>
-                        <div class="col-md-12">
-                            <label for="correo">Correo</label>
-                            <input type="text" class="form-control" id="correo">
-                        </div>
+                        <table class="table" id="tabla-detalle-venta">
+                            <thead>
+                                <th>Producto</th>
+                                <th>Cantidad</th>
+                                <th>Precio</th>
+                                <th>Total</th>
+                            </thead>
+                            <tbody></tbody>
+                        </table>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
-                    <span class="btn btn-outline-success" id="btn-accion-cliente">Guardar</span>
+                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         </div>
@@ -391,7 +304,26 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.4/jquery.datetimepicker.full.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-    <script src="js/venta.js"></script>
+    <script src="https://cdn.datatables.net/2.2.1/js/dataTables.min.js"></script>
+    <!--<script src="https://cdn.datatables.net/buttons/3.2.0/js/dataTables.buttons.min.js"></script>-->
+
+
+    
+
+
+
+    
+	
+
+	<script src="https://cdn.datatables.net/buttons/1.6.5/js/dataTables.buttons.min.js"></script>
+	<script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.flash.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+	<script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.html5.min.js"></script>
+	<script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.print.min.js"></script>
+	<script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.colVis.min.js"></script>
+    <script src="js/ventas.js"></script>
 </body>
 
 </html>
