Se añade opcion de menu en todas las paginas

--- a/clientes.html
+++ b/clientes.html
@@ -93,6 +93,7 @@
                 <div id="collapsePOS" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="venta.html">Nueva Venta</a>
+                        <a class="collapse-item" href="ventas.html">Lista Ventas</a>
                     </div>
                 </div>
             </li>
