Se añade opcion de Menu

--- a/abastecer.html
+++ b/abastecer.html
@@ -114,8 +114,7 @@
                 <div id="collapsePOS" class="collapse show" aria-labelledby="headingPages"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item active" href="abastecer.html">Abastecer Almacen</a>
-                        <a class="collapse-item" href="ventas.html">Lista Ventas</a>
+                        <a class="collapse-item active" href="abastecer.html">Abastecer Sucursal</a>
                     </div>
                 </div>
             </li>
