--- a/sucursales.html
+++ b/sucursales.html
@@ -113,8 +113,7 @@
                 </a>
                 <div id="collapsePOS" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="abastecer.html">Abastecer Almacen</a>
-                        <a class="collapse-item" href="ventas.html">Lista Ventas</a>
+                        <a class="collapse-item" href="abastecer.html">Abastecer Sucursal</a>
                     </div>
                 </div>
             </li>
