--- a/js/dom/logo.html
+++ b/js/dom/logo.html
@@ -23,7 +23,7 @@
     }
     thead{
         background-color: #3e0d04;
-        color: whit;
+        color: white;
     }
 </style>
 <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
